tests/errors/lifetime/loan/shared_loan_blocks_write.sim

        extern fn read_ref(r: &i64);
        fn f(x: i64) {
          r: &i64;
          entry:
            r = &x;
            x = 1;
            call read_ref(move r);
            return
        }
        